<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="period">Period</string>
    <string name="increment">Increment</string>
    <string name="startBpm">Start BPM</string>
    <string name="stopBpm">Stop BPM</string>

</resources>
