<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <NumberPicker
                android:id="@+id/period_NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="periodClicked"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/increment_NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/startBpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/start_NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/stopBpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <NumberPicker
                android:id="@+id/stop_NumberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/info_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/stopStartButton"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="timerStopStart"/>

</LinearLayout>
